# scrabble-buddy

./: README.md  mkdocs.yml  pyproject.toml
docker/: Dockerfile
docs/: index.md
src/scrabble_buddy/: __init__.py
src/scrabble_buddy/app/: main.py
templates/: display.html  index.html
