[tool.poetry]
name = "scrabble-buddy"
version = "0.1.0"
description = "The scrabble assistant that you never knew you needed"
authors = ["djbiega <djbiega@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
